--- a/Commander/FileListView.resx
+++ b/Commander/FileListView.resx
@@ -117,27 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="listImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="listImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAg
-        AgAAAk1TRnQBSQFMAgEBAwEAAQQBAAEEAQABCwEAAQcBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAEs
-        AwABBwMAAQEBAAEgBQAB0AEEJgADIgH/UAADXAH/A1YB/wNSAf8DTgH/A0wB/wNHAf88AAMiAf8EAAMi
-        Af8EAAMiAf8gAAMiAf8kAAOIAf8DgQH/A3wB/wN7Af8DeAH/A14B/0AAAyIB/wMiAf8DIgH/IAADIgH/
-        AyIB/wMiAf8gAAOdAf8DkgH/A4EB/0QAAyIB/wMiAf8DIgH/BAADIgH/AyIB/wMiAf8UAAMiAf8DIgH/
-        AyIB/wMiAf8DIgH/FAADcwH/A28B/wOnAf8DpAH/A4sB/wNdAf8DWwH/RAADIgH/AyIB/wMiAf8YAAMi
-        Af8DIgH/AyIB/wMiAf8DIgH/AyIB/wMiAf8UAAOtAf8DvAH/A7IB/wOmAf8DggH/RAADIgH/BAADIgH/
-        BAADIgH/EAADIgH/AyIB/wMiAf8DIgH/AyIB/wMiAf8DIgH/AyIB/wMiAf8UAAE5AgMBXAO/Af8BMwIC
-        AU9QAAMiAf+YAAFCAU0BPgcAAT4DAAEoAwABLAMAAQcDAAEBAQABAQUAATgXAAP/AQAB+wL/AcABgAMA
-        AeoB/wF/AcABgAMAAfEB/gE/AccBgAMAAcQBfAEfAQEBgAMAAfEB+AEPAYMBgAMAAeoB8AEHAccBgAMA
-        AfsD/wGAAwAL
-</value>
-  </data>
   <metadata name="largeImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>131, 17</value>
+    <value>13, 11</value>
+  </metadata>
+  <metadata name="fileSystemWatcher.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>147, 12</value>
+  </metadata>
+  <metadata name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
   </metadata>
 </root>
